# Chess

./: Black_team.cpp  Black_team.h  CMakeLists.txt  README.md  Team_abs.cpp  Team_abs.h  White_team.cpp  White_team.h  WriteScore.h  ansi_color_codes.h  board.cpp  board.h  input_parser.h  main.cpp  pch.h  piece_abs.cpp  piece_abs.h  piece_bishop_abs.cpp  piece_bishop_abs.h  piece_king_abs.cpp  piece_king_abs.h  piece_knight_abs.cpp  piece_knight_abs.h  piece_pawn_abs.cpp  piece_pawn_abs.h  piece_queen_abs.cpp  piece_queen_abs.h  piece_rook_abs.cpp  piece_rook_abs.h
